--- a/independent-projects/qute/pom.xml
+++ b/independent-projects/qute/pom.xml
@@ -35,7 +35,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <version.junit>5.4.2</version.junit>
+        <version.junit>5.5.2</version.junit>
         <version.gizmo>1.0.0.Final</version.gizmo>
         <version.jboss-logging>3.3.2.Final</version.jboss-logging>
         <version.reactivestreams>1.0.2</version.reactivestreams>
@@ -52,6 +52,14 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- JUnit 5 dependencies, imported as a BOM -->
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${version.junit}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
             <dependency>
                 <groupId>io.quarkus.qute</groupId>
                 <artifactId>qute-core</artifactId>
@@ -91,12 +99,6 @@
                 <groupId>io.smallrye.reactive</groupId>
                 <artifactId>smallrye-reactive-streams-operators-1.0</artifactId>
                 <version>${version.smallrye-reactive-streams-operators}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter</artifactId>
-                <version>${version.junit}</version>
-                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
