--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -68,6 +68,9 @@ update_configs:
       # Tika
       - match:
           dependency_name: "org.apache.tika:tika-parsers"
+      # RX Java 2
+      - match:
+          dependency_name: "io.reactivex.rxjava2:rxjava"
       # Test dependencies
       - match:
           dependency_name: "io.rest-assured:rest-assured"
