--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -74,7 +74,7 @@
         <maven-plugin-annotations.version>3.5.2</maven-plugin-annotations.version>
         <plexus-component-annotations.version>1.7.1</plexus-component-annotations.version>
         <!-- What we actually depend on for the annotations, as latest Graal is not available in Maven fast enough: -->
-        <graal-sdk.version>19.3.0.2</graal-sdk.version>
+        <graal-sdk.version>19.2.1</graal-sdk.version>
         <gizmo.version>1.0.0.Final</gizmo.version>
         <jackson.version>2.10.2</jackson.version>
         <commons-logging-jboss-logging.version>1.0.0.Final</commons-logging-jboss-logging.version>
@@ -841,7 +841,7 @@
                 <version>${jboss-logmanager.version}</version>
                 <exclusions>
                     <exclusion>
-                        <groupId>org.graalvm.nativeimage</groupId>
+                        <groupId>com.oracle.substratevm</groupId>
                         <artifactId>svm</artifactId>
                     </exclusion>
                     <exclusion>
@@ -1653,7 +1653,7 @@
             </dependency>
 
             <dependency>
-                <groupId>org.graalvm.nativeimage</groupId>
+                <groupId>com.oracle.substratevm</groupId>
                 <artifactId>svm</artifactId>
                 <version>${graal-sdk.version}</version>
                 <scope>provided</scope>
