--- a/integration-tests/infinispan-embedded/pom.xml
+++ b/integration-tests/infinispan-embedded/pom.xml
@@ -144,6 +144,7 @@
                                         <additionalBuildArg>-H:ResourceConfigurationFiles=resources-config.json</additionalBuildArg>
                                     </additionalBuildArgs>
                                     <graalvmHome>${graalvmHome}</graalvmHome>
+                                    <enableJni>true</enableJni>
                                 </configuration>
                             </execution>
                         </executions>
