--- a/integration-tests/oidc/src/main/resources/application.properties
+++ b/integration-tests/oidc/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # Configuration file
 quarkus.oidc.auth-server-url=${keycloak.url}/realms/quarkus
 quarkus.oidc.client-id=quarkus-app
+quarkus.oidc.token.principal-claim=email
 quarkus.http.cors=true
