--- a/ci-templates/stages.yml
+++ b/ci-templates/stages.yml
@@ -259,6 +259,7 @@ stages:
             - elytron-security-oauth2
             - elytron-security
             - elytron-security-jdbc
+            - elytron-security-ldap
             - elytron-undertow
           name: security_1
           keycloak: true
