--- a/.github/workflows/pullrequest_labeler.yml
+++ b/.github/workflows/pullrequest_labeler.yml
@@ -6,7 +6,7 @@ jobs:
   triage:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - continue-on-error: true
     - uses: actions/labeler@v2
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
