Introduce basic-test-suite profile
- to skip some parts of the test suite during the full build
- integration tests: maven tooling, kotlin, scala, kubernetes, gradle

--- a/devtools/gradle/pom.xml
+++ b/devtools/gradle/pom.xml
@@ -141,5 +141,16 @@
                 <gradle.task>assemble</gradle.task>
             </properties>
         </profile>
+        <profile>
+            <id>basic-test-suite</id>
+            <activation>
+                <property>
+                    <name>basicTests</name>
+                </property>
+            </activation>
+            <properties>
+                <gradle.task>assemble</gradle.task>
+            </properties>
+        </profile>
     </profiles>
 </project>
