Trying to stabilize CodeFlowTest

--- a/integration-tests/oidc-code-flow/src/main/resources/application.properties
+++ b/integration-tests/oidc-code-flow/src/main/resources/application.properties
@@ -5,6 +5,10 @@ quarkus.oidc.auth-server-url=${keycloak.url}/realms/quarkus
 quarkus.oidc.client-id=quarkus-app
 quarkus.oidc.authentication.scopes=profile,email,phone
 quarkus.oidc.authentication.redirect-path=/web-app
+# Several tests here start from /index.html (state cookie is available)
+# and next they try /web-app/* (when a state cookie might not be available)
+# Adding 'cookie-path=/' may prevent the intermittent CI failures to do with the missing state cookie
+quarkus.oidc.authentication.cookie-path=/
 quarkus.oidc.authentication.extra-params.max-age=60
 quarkus.http.cors=true
 quarkus.oidc.application-type=web-app
@@ -40,4 +44,5 @@ quarkus.oidc.tenant-3.application-type=web-app
 quarkus.http.auth.permission.roles1.paths=/index.html
 quarkus.http.auth.permission.roles1.policy=authenticated
 
+quarkus.log.category."io.quarkus.oidc.runtime.CodeAuthenticationMechanism".level=TRACE
 #quarkus.log.category."org.apache.http".level=TRACE
