feat: Adopt recommended k8s/openshift labels

--- a/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-quarkus-app-name.properties
+++ b/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-quarkus-app-name.properties
@@ -1,8 +1,8 @@
 quarkus.application.name=test
 quarkus.kubernetes.deployment-target=kubernetes,openshift
 quarkus.kubernetes.name=foo
-quarkus.kubernetes.group=bar
 quarkus.kubernetes.version=1.0-kube
+quarkus.kubernetes.part-of=bar
 
 quarkus.openshift.name=ofoo
 quarkus.openshift.group=obar
