--- a/extensions/smallrye-reactive-messaging-amqp/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/smallrye-reactive-messaging-amqp/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,6 +1,7 @@
 ---
 name: "SmallRye Reactive Messaging - AMQP Connector"
 metadata:
+  short-name: "amqp"
   keywords:
   - "amqp"
   - "reactive-amqp"
