Support OIDC client_secret_post client authentication

--- a/integration-tests/oidc-code-flow/src/main/resources/application.properties
+++ b/integration-tests/oidc-code-flow/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 # Default tenant configuration
 quarkus.oidc.auth-server-url=${keycloak.url}/realms/quarkus
 quarkus.oidc.client-id=quarkus-app
+quarkus.oidc.credentials.secret=secret
 quarkus.oidc.authentication.scopes=profile,email,phone
 quarkus.oidc.authentication.redirect-path=/web-app
 # Several tests here start from /index.html (state cookie is available)
@@ -16,7 +17,8 @@ quarkus.oidc.application-type=web-app
 # Tenant which does not need to restore a request path after redirect
 quarkus.oidc.tenant-1.auth-server-url=${keycloak.url}/realms/quarkus
 quarkus.oidc.tenant-1.client-id=quarkus-app
-quarkus.oidc.tenant-1.credentials.secret=secret
+quarkus.oidc.tenant-1.credentials.client-secret.value=secret
+quarkus.oidc.tenant-1.credentials.client-secret.method=post
 quarkus.oidc.tenant-1.token.issuer=${keycloak.url}/realms/quarkus
 quarkus.oidc.tenant-1.authentication.redirect-path=/web-app/callback-after-redirect
 quarkus.oidc.tenant-1.authentication.restore-path-after-redirect=false
@@ -25,7 +27,7 @@ quarkus.oidc.tenant-1.application-type=web-app
 # Tenant which does not need to restore a request path after redirect with a different redirect path root
 quarkus.oidc.tenant-2.auth-server-url=${keycloak.url}/realms/quarkus
 quarkus.oidc.tenant-2.client-id=quarkus-app
-quarkus.oidc.tenant-2.credentials.secret=secret
+quarkus.oidc.tenant-2.credentials.client-secret.value=secret
 quarkus.oidc.tenant-2.token.issuer=${keycloak.url}/realms/quarkus
 quarkus.oidc.tenant-2.authentication.redirect-path=/web-app2
 quarkus.oidc.tenant-2.authentication.restore-path-after-redirect=false
