--- a/integration-tests/maven/src/test/resources/projects/classic-noconfig/pom.xml
+++ b/integration-tests/maven/src/test/resources/projects/classic-noconfig/pom.xml
@@ -34,6 +34,12 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-undertow-websockets</artifactId>
     </dependency>
+    <!-- quarkus-logging-json dependency to make sure application start
+ doesn't fail in dev mode due to classloading issues (see issue#7469) -->
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-logging-json</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>bootstrap</artifactId>
